@@ -1,3 +1,4 @@
+.juliahistory
 *~
 *.jl.cov
 *.jl.*.cov
